--- a/style.css
+++ b/style.css
@@ -4,10 +4,28 @@
     box-sizing: border-box;
 }
 
-body {
+html {
     height: 100vh;
 }
+body {
+    height: 100vh;
+    /* display: flex; */
+    background-image: url(background.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
+.button {
+    font-size: 30px;
+    background-color: lightblue;
+    border: none;
+    padding: 25px 45px;
+    margin: 15px;
+}   
+.button:hover {
+    box-shadow: 0px 0px 3px;
+}
 .block {
     margin: 0;
     padding: 0;
@@ -15,19 +33,57 @@ body {
     line-break: 0;
 }
 .container {
+    align-items: center;
     background-color: #fff;
-    line-height: 0;
-    line-break: 0;
     box-sizing: content-box;
     display: flex;
     flex-wrap: wrap;
-    /* height: 800px; */
     width: 800px;
-    border: cyan solid 2px;
-   /* overflow: hidden; */
+    border: black solid 2px;
    gap: 0;
 }
 
 .mouse-enter {
     background-color: green;
+}
+
+.header {
+    justify-content: center;
+}
+#main-header {
+    text-align: left;
+    font-size: 45px;
+    color: blue;
+    margin-left: 10px;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#main-area {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+#content {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+.color-input {
+    /* height: 100px;
+    width: 100px; */
+    border: none;
+}
+
+.color-select {
+    display: flex;
+    justify-content: center;
+
 }
