--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ html {
 }
 body {
     height: 100vh;
-    /* display: flex; */
     background-image: url(background.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -17,14 +16,14 @@ body {
 }
 
 .button {
-    font-size: 30px;
+    font-size: 20px;
     background-color: lightblue;
     border: none;
-    padding: 25px 45px;
+    padding: 20px 30px;
     margin: 15px;
 }   
 .button:hover {
-    box-shadow: 0px 0px 3px;
+    box-shadow: 0px 0px 5px wheat;
 }
 .block {
     margin: 0;
@@ -38,9 +37,10 @@ body {
     box-sizing: content-box;
     display: flex;
     flex-wrap: wrap;
-    width: 800px;
+    /* height: 600px; */
+    width: 600px;
     border: black solid 2px;
-   gap: 0;
+   /* gap: 0; */
 }
 
 .mouse-enter {
